tests/integration/snapshots/integration__parse_failure__unexpected_character.snap
---
source: tests/integration/parse_failure.rs
expression: output
---
args: []
status: 1
success: false
stdin ---
🦀
stdout ---

stderr ---
error: unexpected character `🦀`. expected start of a json value
 --> stdin:1:1
  |
1 | 🦀
  | ^^
