tests/integration/snapshots/integration__parse_failure__valid_fraction.snap
---
source: tests/integration/parse_failure.rs
expression: "format_output_snapshot(json, &annotated)"
---
case --- 
98.8
stdout --- 
98.8
stderr --- 
<empty>
