tests/integration/snapshots/integration__parse_failure__valid_integer.snap
---
source: tests/integration/parse_failure.rs
expression: "format_output_snapshot(json, &annotated)"
---
case --- 
298
stdout --- 
298
stderr --- 
<empty>
