tests/integration/snapshots/integration__parse_failure__valid_negative_fraction.snap
---
source: tests/integration/parse_failure.rs
expression: "format_output_snapshot(json, &annotated)"
---
case --- 
-98.123456789
stdout --- 
-98.123456789
stderr --- 
<empty>
